--- a/resources/sass/vocabulary_practice.scss
+++ b/resources/sass/vocabulary_practice.scss
@@ -72,6 +72,7 @@
         display: block;
         width: 100%;
         height: 100%;
+        padding-top: 25px;
     }
 
     #review-progress-line {
